--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <ul class="nav__links">
             <li>
               <a href="#staff" class="nav__link"
-                >Los preferidos de nuestro staff.</a
+                >Los preferidos de nuestro staff</a
               >
             </li>
 
