--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
     
       <section class="events">
         <div class="events__content">
-          <div class="events__cover">
           <h2 class="events__heading">Próximos eventos:</h2>
           <h3 class="events__title">
             En honor de Joan Feynman: mujeres en la astrofísica
@@ -205,7 +204,7 @@
           src="./images/cafe.png"
           alt="Cafe"
           class="events__image">
-        <div class="person" class="person_name_feynman">
+        <div class="person person_name_feynman">
           <p class="person__caption">Joan Feynman</p>
           <img
           src="./images/person_feynman.png"
@@ -213,8 +212,39 @@
           class="person__image_size_l"
           class="person__image">
         </div>
+        <div class="person person_name_burbidge">
+          <p class="person__caption">Margaret Burbidge</p>
+          <img
+          src="./images/person_burbidge.png"
+          alt="Margaret Burbidge"
+          class="person__image_size_m"
+          class="person__image">
         </div>
-      </div>
+        <div class="person person_name_cannon">
+          <img
+          src="./images/person_cannon.png"
+          alt="Annie Jump Cannon"
+          class="person__image_size_m"
+          class="person__image">
+          <p class="person__caption">Annie Jump Cannon</p>
+        </div>
+        <div class="person person_name_tarter">
+          <p class="person__caption">Jill Tarter</p>
+          <img
+          src="./images/person_tarter.png"
+          alt="Jill Tartet"
+          class="person__image_size_m"
+          class="person__image">
+        </div>
+        <div class="person person_name_mitchell">
+          <img 
+          src="./images/person_mitchell.png"
+          alt="Maria Mitchell"
+          class="person__image_size_s"
+          class="person__image">
+          <p class="person__caption">Maria Mitchell</p>
+        </div>
+        </div>
         <!-- Comienza a crear la composición aquí -->
       </section>
       </main>
