--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
           </ul>
         </section>
     
-      <section class="events">
-        <div class="events__content">
-          <h2 class="events__heading">Próximos eventos:</h2>
-          <h3 class="events__title">
+      <section class="events" id="events">
+        <div class="events__content" id="events-content">
+          <h2 class="events__heading" id="events-heading">Próximos eventos:</h2>
+          <h3 class="events__title" id="events-title">
             En honor de Joan Feynman: mujeres en la astrofísica
           </h3>
           <div class="event-info events__info-section">
