--- a/index.html
+++ b/index.html
@@ -209,40 +209,35 @@
           <img
           src="./images/person_feynman.png"
           alt="Joan Feynman"
-          class="person__image_size_l"
-          class="person__image">
+          class="person__image person__image_size_l person__image">
         </div>
         <div class="person person_name_burbidge">
           <p class="person__caption">Margaret Burbidge</p>
           <img
           src="./images/person_burbidge.png"
           alt="Margaret Burbidge"
-          class="person__image_size_m"
-          class="person__image">
+          class="person__image person__image_size_m">
         </div>
         <div class="person person_name_cannon">
           <img
           src="./images/person_cannon.png"
           alt="Annie Jump Cannon"
-          class="person__image_size_m"
-          class="person__image">
-          <p class="person__caption">Annie Jump Cannon</p>
+          class="person__image person__image_size_m">
+          <p class="person person__caption">Annie Jump Cannon</p>
         </div>
         <div class="person person_name_tarter">
           <p class="person__caption">Jill Tarter</p>
           <img
           src="./images/person_tarter.png"
           alt="Jill Tartet"
-          class="person__image_size_m"
-          class="person__image">
+          class="person__image person__image_size_m">
         </div>
-        <div class="person person_name_mitchell">
+        <div class="person__image person_name_mitchell">
           <img 
           src="./images/person_mitchell.png"
           alt="Maria Mitchell"
-          class="person__image_size_s"
-          class="person__image">
-          <p class="person__caption">Maria Mitchell</p>
+          class="person__image person__image_size_s">
+          <p class="person person__caption">Maria Mitchell</p>
         </div>
         </div>
         <!-- Comienza a crear la composición aquí -->
