--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <img
           src="./images/cafe.png"
           alt="Cafe"
-          class="events__image">
+          class="image events__image">
         <div class="person person_name_feynman">
           <p class="person__caption">Joan Feynman</p>
           <img
@@ -232,7 +232,7 @@
           alt="Jill Tartet"
           class="person__image person__image_size_m">
         </div>
-        <div class="person__image person_name_mitchell">
+        <div class="person person_name_mitchell">
           <img 
           src="./images/person_mitchell.png"
           alt="Maria Mitchell"
