--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
           <ul class="nav__links">
             <li>
-              <a href="#staff" class="nav__link"
+              <a href="#staff" class="nav__link" href="#"
                 >Los preferidos de nuestro staff</a
               >
             </li>
@@ -168,27 +168,26 @@
           <h3 class="events__title" id="events-title">
             En honor de Joan Feynman: mujeres en la astrofísica
           </h3>
-          <div class="event-info events__info-section">
+          <div class="event-info events__info-section" id="event-info">
             <div class="event-info__item">
               <img
                 src="./images/icon_calendar.svg"
                 alt="Calendar icon"
-                class="event-info__icon"
-              />
+                class="event-info__icon"/>
               <p class="event-info__text">Lunes 12 de enero</p>
             </div>
-            <div class="event-info__item">
+            <div class="event-info__item" id="event-info-item">
               <img
                 src="./images/icon_pin.svg"
                 alt="Pin icon"
                 class="event-info__icon"
               />
-              <p class="event-info__text">
+              <p class="event-info__text" id="event-info-text">
                 Sala de conferencias y virtual de la biblioteca Triple Peaks
               </p>
             </div>
           </div>
-          <p class="events__description">
+          <p class="events__description" id="events-description">
             En este evento, en el que celebramos el nombre de nuestra biblioteca, nuestra
             invitada nos llevará a través de un viaje para conocer a algunas de las mujeres
             investigadoras más importantes en el mundo de la ciencia espacial. Es
@@ -199,7 +198,7 @@
           </p>
           <a href="#" class="events__more">Más eventos &rarr;</a>
         </div>
-        <div class="events__cover">
+        <div class="events__cover" id="eevents-cover">
           <img
           src="./images/cafe.png"
           alt="Cafe"
