--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
           <ul class="nav__links">
             <li>
-              <a href="#staff" class="nav__link" href="#"
+              <a href="#staff" class="nav__link"
                 >Los preferidos de nuestro staff</a
               >
             </li>
@@ -162,7 +162,7 @@
           </ul>
         </section>
     
-      <section class="events" id="events">
+      <section class="events" id="events" href="#events">
         <div class="events__content" id="events-content">
           <h2 class="events__heading" id="events-heading">Próximos eventos:</h2>
           <h3 class="events__title" id="events-title">
