--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#events"
+              <a class="nav__link" href="#staff"
                 >Los preferidos de nuestro staff</a
               >
             </li>
