--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             </li>
 
             <li>
-              <a class="nav__link">Eventos</a>
+              <a class="nav__link" href="#events">Eventos</a>
             </li>
 
             <li>
-              <a class="nav__link">Conviértete en miembro</a>
+              <a class="nav__link" href="#">Conviértete en miembro</a>
             </li>
 
             <li>
-              <a class="nav__link">Contactos</a>
+              <a class="nav__link" href="#">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -162,7 +162,7 @@
           </ul>
         </section>
     
-      <section class="events" id="events">
+      <section class="events" id="events" >
         <div class="events__content" id="events-content">
           <h2 class="events__heading" id="events-heading">Próximos eventos:</h2>
           <h3 class="events__title" id="events-title">
