--- a/index.html
+++ b/index.html
@@ -239,9 +239,123 @@
           <p class="person person__caption">Maria Mitchell</p>
         </div>
         </div>
-        <!-- Comienza a crear la composición aquí -->
-      </section>
+        </section>      
+
+      </body>   
+  
+      <footer>
+        <section class="membership">
+          <h2 class="membership__title">¡Convertirse en miembro es muy fácil!</h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Paso 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Completa el formulario de afiliación en línea o en persona.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Ven y recoge tu credencial de la biblioteca en la recepción.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Firma el envés de la tarjeta.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                ¡Disfruta de los increíbles beneficios de nuestra membresía!
+              </p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer footer__columns">
+          <div class="footer__column">
+              <img
+              src="./images/logo.svg"
+              alt="Logo"
+              class="footer__logo">
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h3 class="footer__column-heading">
+              Horario de apertura
+            </h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                  Lunes a viernes: 9 a.m. -- 8 p.m.
+              </li>
+              <li class="footer__list-item">
+                  Sábados y domingos: 10 a.m. -- 6 p.m.
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h3 class="footer__column-heading">
+              Redes sociales
+            </h3>
+            <ul class="footer__list">
+              <li href="#" class="footer__list-item">
+                <a class="footer__column-link">
+                  <img
+                  src="./images/facebook_white.svg"
+                  alt="Facebook logo"
+                  class="footer__social-icon">
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <p class="footer__column-link">
+                  <img
+                  src="images/instagram_white.svg"
+                  alt="Instagram logo"
+                  class="footer__social-icon"
+                  href="#">
+                  Instagram
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__copyright">
+            <p>
+              © 2024 Fernanda Vega 
+            </p>
+          </div>
+        </section>
+      </footer>
+
+            
       </main>
     </div>
-  </body>
+ 
 </html>
