Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -298,8 +298,9 @@
               </p>
             </li>
           </ul>
-        </div>
+        </section>
 
+        <section>
         <div class="footer footer__columns">
           <div class="footer__column">
               <img
@@ -352,9 +353,7 @@
             </p>
           </div>
         </section>
-      </footer>
-
-            
+      </footer> 
       </main>
     </div>
  
