--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </li>
           </ul>
         </section>
-    
+      </main>
       <section class="events" id="events" >
         <div class="events__content" id="events-content">
           <h2 class="events__heading" id="events-heading">Próximos eventos:</h2>
@@ -239,9 +239,8 @@
           <p class="person person__caption">Maria Mitchell</p>
         </div>
         </div>
-        </section>      
-
-      </body>   
+        </section>    
+    
   
       <footer>
         <section class="membership">
@@ -301,7 +300,7 @@
         </section>
 
         <section>
-        <div class="footer footer__columns">
+        <div class="footer__columns footer">
           <div class="footer__column">
               <img
               src="./images/logo.svg"
@@ -354,7 +353,6 @@
           </div>
         </section>
       </footer> 
-      </main>
     </div>
- 
+  </body>
 </html>
