Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             alt="Logotipo de la Biblioteca Triple Peaks"
             class="nav__logo"
           />
-
           <ul class="nav__links">
             <li>
               <a class="nav__link" href="#staff"
@@ -162,7 +161,7 @@
           </ul>
         </section>
     
-      <section class="events" id="events" >
+       <section class="events" id="events" >
         <div class="events__content" id="events-content">
           <h2 class="events__heading" id="events-heading">Próximos eventos:</h2>
           <h3 class="events__title" id="events-title">
@@ -240,7 +239,7 @@
         </div>
         </div>
         </section>      
-
+      </main>
       </body>   
   
       <footer>
@@ -301,7 +300,7 @@
         </div>
 
         <div class="footer footer__columns">
-          <div class="footer__column">
+          <div class="footer__column footer">
               <img
               src="./images/logo.svg"
               alt="Logo"
@@ -356,9 +355,6 @@
           </div>
         </section>
       </footer>
-
-            
-      </main>
     </div>
  
 </html>
