--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
       </body>   
   
       <footer>
-        <section class="membership">
-          <h2 class="membership__title">¡Convertirse en miembro es muy fácil!</h2>
-          <ul class="membership__steps">
+        <section class="membership" id="membership">
+          <h2 class="membership__title" id="membership-title">¡Convertirse en miembro es muy fácil!</h2>
+          <ul class="membership__steps" id="membership-steps">
             <li class="step">
               <h3 class="step__title">
                 Paso 1
@@ -298,8 +298,10 @@
             </li>
           </ul>
         </div>
+      </section>
 
-        <div class="footer footer__columns">
+      <section class="footer">
+        <div class="footer__columns">
           <div class="footer__column footer">
               <img
               src="./images/logo.svg"
