--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </div>
   </body>   
   
-      <footer>
+  <footer>
         <section class="membership" id="membership">
           <h2 class="membership__title" id="membership-title">¡Convertirse en miembro es muy fácil!</h2>
           <ul class="membership__steps" id="membership-steps">
@@ -301,61 +301,64 @@
         </div>
        </section>
 
-       <section class="footer">
-        <div class="footer__columns">
-          <div class="footer__column footer">
-              <img
+       <section class="footer" id="footer">
+        <div class="footer__columns" id="footer-columns">
+          <div class="footer__column footer" id="footer-column">
+            <img
               src="./images/logo.svg"
               alt="Logo"
-              class="footer__logo">
+              class="footer__logo" id="footer-logo"
+            >
           </div>
-          <div class="footer__column footer__column_content_hours">
-            <h3 class="footer__column-heading">
+          <div class="footer__column footer__column_content_hours" id="footer-column-content-hours">
+            <h3 class="footer__column-heading" id="foooter-column-heading">
               Horario de apertura
             </h3>
-            <ul class="footer__list">
-              <li class="footer__list-item">
+            <ul class="footer__list" id="footer-list">
+              <li class="footer__list-item" id="footer-list-item">
                 <p>
                   Lunes a viernes: 9 a.m. -- 8 p.m.
                 </p>
               </li>
-              <li class="footer__list-item">
+              <li class="footer__list-item" id="footer-list-item">
                 <p>
                   Sábados y domingos: 10 a.m. -- 6 p.m.
                 </p>
               </li>
             </ul>
           </div>
-          <div class="footer__column footer__column_content_social">
-            <h3 class="footer__column-heading">
+          <div class="footer__column footer__column_content_social" id="footer-column-content-social">
+            <h3 class="footer__column-heading" id="foooter-column-heading">
               Redes sociales
             </h3>
-            <ul class="footer__list">
-              <li class="footer__list-item">
-                <p class="footer__column-link">
+            <ul class="footer__list" id="footer-list">
+              <li class="footer__list-item" id="footer__list-item">
+                <p class="footer__column-link" id="footer-column-link">
                   <img
                   src="./images/facebook_white.svg"
                   alt="Facebook"
                   class="footer__social-icon"
+                  id="footer-social-icon"
                   href="#">
                   Facebook
                 </p>
               </li>
-              <li class="footer__list-item">
-                <p class="footer__column-link">
+              <li class="footer__list-item" id="footer-list-item">
+                <p class="footer__column-link" id="footer-column-link">
                   <img
                   src="images/instagram_white.svg"
                   alt="Instagram"
                   class="footer__social-icon"
+                  id="footer-social-icon"
                   href="#">
                   Instagram
                 </p>
               </li>
             </ul>
-            <p class="footer__copyright">
+            <p class="footer__copyright" id="footer-copyright">
               © 2024 Fernanda Vega 
             </p>
           </div>
         </section>
-      </footer>
+  </footer>
 </html>
