Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -239,11 +239,10 @@
         </div>
         </div>
         </section>      
-      </main>
-    </div>
+      </main> 
   </body>   
   
-  <footer>
+     <footer>
         <section class="membership" id="membership">
           <h2 class="membership__title" id="membership-title">¡Convertirse en miembro es muy fácil!</h2>
           <ul class="membership__steps" id="membership-steps">
@@ -320,7 +319,7 @@
                   Lunes a viernes: 9 a.m. -- 8 p.m.
                 </p>
               </li>
-              <li class="footer__list-item" id="footer-list-item">
+              <li class="footer__list-item">
                 <p>
                   Sábados y domingos: 10 a.m. -- 6 p.m.
                 </p>
@@ -360,5 +359,6 @@
             </p>
           </div>
         </section>
-  </footer>
+    </footer>
+   </div>
 </html>
