--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             </li>
 
             <li>
-              <a class="nav__link" href="#">Conviértete en miembro</a>
+              <a class="nav__link" href="#membership">Conviértete en miembro</a>
             </li>
 
             <li>
-              <a class="nav__link" href="#">Contactos</a>
+              <a class="nav__link" href="#footer-social-item">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -299,16 +299,16 @@
             </ul>
         </section>
 
-       <section class="footer" id="footer">
-        <div class="footer__columns" id="footer-columns">
-          <div class="footer__column footer" id="footer-column">
+        <section class="footer" id="footer">
+         <div class="footer__columns" id="footer-columns">
+           <div class="footer__column footer" id="footer-column">
             <img
               src="./images/logo.svg"
               alt="Logo"
               class="footer__logo" id="footer-logo"
             >
-          </div>
-          <div class="footer__column footer__column_content_hours" id="footer-column-content-hours">
+            </div>
+           <div class="footer__column footer__column_content_hours" id="footer-column-content-hours">
             <h3 class="footer__column-heading" id="foooter-column-heading">
               Horario de apertura
             </h3>
@@ -329,15 +329,14 @@
             <h3 class="footer__column-heading" id="foooter-column-heading">
               Redes sociales
             </h3>
-            <ul class="footer__list" id="footer-list">
+            <ul class="footer__list">
               <li class="footer__list-item" id="footer__list-item">
                 <p class="footer__column-link" id="footer-column-link">
                   <img
                   src="./images/facebook_white.svg"
                   alt="Facebook"
                   class="footer__social-icon"
-                  id="footer-social-icon"
-                  href="#">
+                  id="footer-social-icon">
                   Facebook
                 </p>
               </li>
