Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -161,88 +161,107 @@
           </ul>
         </section>
     
-       <section class="events" id="events" >
-        <div class="events__content" id="events-content">
-          <h2 class="events__heading" id="events-heading">Próximos eventos:</h2>
-          <h3 class="events__title" id="events-title">
-            En honor de Joan Feynman: mujeres en la astrofísica
-          </h3>
-          <div class="event-info events__info-section" id="event-info">
-            <div class="event-info__item">
+        <section class="events" id="events" >
+         <div class="events__content" id="events-content">
+             <h2 class="events__heading" id="events-heading">
+               Próximos eventos:
+             </h2>
+             <h3 class="events__title" id="events-title">
+               En honor de Joan Feynman: mujeres en la astrofísica
+             </h3>
+             <div class="event-info events__info-section" id="event-info">
+               <div class="event-info__item">
+                 <img
+                  src="./images/icon_calendar.svg"
+                  alt="Calendar icon"
+                  class="event-info__icon"
+                  />
+                 <p class="event-info__text">
+                   Lunes 12 de enero
+                 </p>
+               </div>
+               <div class="event-info__item" id="event-info-item">
+                 <img
+                 src="./images/icon_pin.svg"
+                 alt="Pin icon"
+                 class="event-info__icon"
+                 />
+                  <p class="event-info__text" id="event-info-text">
+                   Sala de conferencias y virtual de la biblioteca Triple Peaks
+                  </p>
+              </div>
+             </div>
+             <p class="events__description" id="events-description">
+                En este evento, en el que celebramos el nombre de nuestra biblioteca, nuestra
+                invitada nos llevará a través de un viaje para conocer a algunas de las mujeres
+                investigadoras más importantes en el mundo de la ciencia espacial. Es
+                fácil caer en la falsa idea de que este campo está principalmente
+                dominado por hombres, pero nuestra conferencia busca cambiar esa noción y
+                probar que no ha sido así desde, al menos, el siglo
+                XVII.
+             </p>
+             <a href="#" class="events__more">
+               Más eventos &rarr;
+             </a>
+           </div>
+           <div class="events__cover" id="eevents-cover">
+             <img
+             src="./images/cafe.png"
+             alt="Cafe"
+             class="image events__image">
+             <div class="person person_name_feynman">
+               <p class="person__caption">
+                 Joan Feynman
+               </p>
+               <img
+                 src="./images/person_feynman.png"
+                 alt="Joan Feynman"
+                 class="person__image person__image_size_l person__image"
+                 />
+           </div>
+           <div class="person person_name_burbidge">
+             <p class="person__caption">
+               Margaret Burbidge
+             </p>
               <img
-                src="./images/icon_calendar.svg"
-                alt="Calendar icon"
-                class="event-info__icon"/>
-              <p class="event-info__text">Lunes 12 de enero</p>
-            </div>
-            <div class="event-info__item" id="event-info-item">
-              <img
-                src="./images/icon_pin.svg"
-                alt="Pin icon"
-                class="event-info__icon"
+               src="./images/person_burbidge.png"
+               alt="Margaret Burbidge"
+               class="person__image person__image_size_m"
+               />
+           </div>
+           <div class="person person_name_cannon">
+             <img
+               src="./images/person_cannon.png"
+               alt="Annie Jump Cannon"
+               class="person__image person__image_size_m"
               />
-              <p class="event-info__text" id="event-info-text">
-                Sala de conferencias y virtual de la biblioteca Triple Peaks
-              </p>
-            </div>
-          </div>
-          <p class="events__description" id="events-description">
-            En este evento, en el que celebramos el nombre de nuestra biblioteca, nuestra
-            invitada nos llevará a través de un viaje para conocer a algunas de las mujeres
-            investigadoras más importantes en el mundo de la ciencia espacial. Es
-            fácil caer en la falsa idea de que este campo está principalmente
-            dominado por hombres, pero nuestra conferencia busca cambiar esa noción y
-            probar que no ha sido así desde, al menos, el siglo
-            XVII.
-          </p>
-          <a href="#" class="events__more">Más eventos &rarr;</a>
-        </div>
-        <div class="events__cover" id="eevents-cover">
-          <img
-          src="./images/cafe.png"
-          alt="Cafe"
-          class="image events__image">
-        <div class="person person_name_feynman">
-          <p class="person__caption">Joan Feynman</p>
-          <img
-          src="./images/person_feynman.png"
-          alt="Joan Feynman"
-          class="person__image person__image_size_l person__image">
-        </div>
-        <div class="person person_name_burbidge">
-          <p class="person__caption">Margaret Burbidge</p>
-          <img
-          src="./images/person_burbidge.png"
-          alt="Margaret Burbidge"
-          class="person__image person__image_size_m">
-        </div>
-        <div class="person person_name_cannon">
-          <img
-          src="./images/person_cannon.png"
-          alt="Annie Jump Cannon"
-          class="person__image person__image_size_m">
-          <p class="person person__caption">Annie Jump Cannon</p>
-        </div>
-        <div class="person person_name_tarter">
-          <p class="person__caption">Jill Tarter</p>
-          <img
-          src="./images/person_tarter.png"
-          alt="Jill Tartet"
-          class="person__image person__image_size_m">
-        </div>
-        <div class="person person_name_mitchell">
-          <img 
-          src="./images/person_mitchell.png"
-          alt="Maria Mitchell"
-          class="person__image person__image_size_s">
-          <p class="person person__caption">Maria Mitchell</p>
-        </div>
-        </div>
+             <p class="person person__caption">
+               Annie Jump Cannon
+             </p>
+           </div>
+           <div class="person person_name_tarter">
+             <p class="person__caption">
+               Jill Tarter
+             </p>
+             <img
+               src="./images/person_tarter.png"
+               alt="Jill Tartet"
+              class="person__image person__image_size_m">
+           </div>
+           <div class="person person_name_mitchell">
+             <img 
+               src="./images/person_mitchell.png"
+               alt="Maria Mitchell"
+               class="person__image person__image_size_s"
+              />
+             <p class="person person__caption">
+               Maria Mitchell
+             </p>
+           </div>
+         </div>
         </section>      
-      </main> 
-    
   
-      <footer>
+        <footer>
         <section class="membership" id="membership">
           <h2 class="membership__title" id="membership-title">¡Convertirse en miembro es muy fácil!</h2>
             <ul class="membership__steps" id="membership-steps">
@@ -326,12 +345,12 @@
             </ul>
           </div>
           <div class="footer__column footer__column_content_social" id="footer-column-content-social">
-            <h3 class="footer__column-heading" id="foooter-column-heading">
+            <h3 class="footer__column-heading">
               Redes sociales
             </h3>
             <ul class="footer__list">
-              <li class="footer__list-item" id="footer__list-item">
-                <p class="footer__column-link" id="footer-column-link">
+              <li class="footer__list-item">
+                <p class="footer__column-link">
                   <img
                   src="./images/facebook_white.svg"
                   alt="Facebook"
@@ -357,7 +376,8 @@
             </p>
           </div>
         </section>
-      </footer>
+       </footer>
+      </main> 
     </div>
   </body>
 </html>
