--- a/index.html
+++ b/index.html
@@ -359,14 +359,13 @@
                   Facebook
                 </p>
               </li>
-              <li class="footer__list-item" id="footer-list-item">
+              <li class="footer__list-item">
                 <p class="footer__column-link" id="footer-column-link">
                   <img
                   src="images/instagram_white.svg"
                   alt="Instagram"
                   class="footer__social-icon"
-                  id="footer-social-icon"
-                  href="#">
+                  />
                   Instagram
                 </p>
               </li>
