Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 
       <main class="content">
         <section id="staff" class="staff">
-          <h2 class="staff__title">Los preferidos de nuestro staff</h2>
+          <h2 class="staff__title">
+            Los preferidos de nuestro staff
+          </h2>
 
           <p class="staff__subtitle">Que nuestros lectores y lectoras aman</p>
 
@@ -263,60 +265,60 @@
   
         <footer>
          <section class="membership" id="membership">
-          <h2 class="membership__title" id="membership-title">¡Convertirse en miembro es muy fácil!</h2>
-            <ul class="membership__steps" id="membership-steps">
-              <li class="step">
-               <h3 class="step__title">
-                  Paso 1
-                 <img
-                  src="./images/icon_step_forward.svg"
-                  alt="icon forward"
-                  class="step__icon"
-                 />
-               </h3>
-                <p class="step__description">
-                 Completa el formulario de afiliación en línea o en persona.
-                </p>
-              </li>
-              <li class="step">
-                <h3 class="step__title">
-                  Paso 2
-                 <img
-                  src="./images/icon_step_forward.svg"
-                  alt="icon forward"
-                  class="step__icon"
-                 />
+           <h2 class="membership__title" id="membership-title">¡Convertirse en miembro es muy fácil!</h2>
+             <ul class="membership__steps" id="membership-steps">
+               <li class="step">
+                 <h3 class="step__title">
+                   Paso 1
+                   <img
+                     src="./images/icon_step_forward.svg"
+                     alt="icon forward"
+                     class="step__icon"
+                    />
                  </h3>
-               <p class="step__description">
-                Ven y recoge tu credencial de la biblioteca en la recepción.
-               </p>
-             </li>
-             <li class="step">
-                <h3 class="step__title">
-                 Paso 3
-                 <img
-                  src="./images/icon_step_forward.svg"
-                  alt="icon forward"
-                  class="step__icon"
-                 />
-                </h3>
-               <p class="step__description">Firma el envés de la tarjeta.</p>
-             </li>
-             <li class="step">
-                <h3 class="step__title">
-                 Paso 4
-                  <img
-                  src="./images/icon_step_finish.svg"
-                  alt="icon finish"
-                  class="step__icon"
-                  />
-                </h3>
-                <p class="step__description">
-                ¡Disfruta de los increíbles beneficios de nuestra membresía!
-                </p>
-              </li>
-            </ul>
-         </section>
+                 <p class="step__description">
+                   Completa el formulario de afiliación en línea o en persona.
+                 </p>
+               </li>
+               <li class="step">
+                 <h3 class="step__title">
+                   Paso 2
+                   <img
+                     src="./images/icon_step_forward.svg"
+                     alt="icon forward"
+                     class="step__icon"
+                    />
+                 </h3>
+                 <p class="step__description">
+                   Ven y recoge tu credencial de la biblioteca en la recepción.
+                 </p>
+               </li>
+               <li class="step">
+                 <h3 class="step__title">
+                   Paso 3
+                   <img
+                     src="./images/icon_step_forward.svg"
+                     alt="icon forward"
+                     class="step__icon"
+                   />
+                 </h3>
+                 <p class="step__description">Firma el envés de la tarjeta.</p>
+               </li>
+               <li class="step">
+                 <h3 class="step__title">
+                   Paso 4
+                   <img
+                     src="./images/icon_step_finish.svg"
+                     alt="icon finish"
+                     class="step__icon"
+                   />
+                 </h3>
+                 <p class="step__description">
+                   ¡Disfruta de los increíbles beneficios de nuestra membresía!
+                 </p>
+               </li>
+             </ul>
+          </section>
 
          <section class="footer" id="footer">
            <div class="footer__columns" id="footer-columns">
