Actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -193,18 +193,20 @@
                 </p>
               </div>
             </div>
-            <p class="events__description" id="events-description">
-              En este evento, en el que celebramos el nombre de nuestra biblioteca, nuestra
-              invitada nos llevará a través de un viaje para conocer a algunas de las mujeres
-              investigadoras más importantes en el mundo de la ciencia espacial. Es
-              fácil caer en la falsa idea de que este campo está principalmente
-              dominado por hombres, pero nuestra conferencia busca cambiar esa noción y
-              probar que no ha sido así desde, al menos, el siglo
-              XVII.
-            </p>
-            <a href="#" class="events__more">
-              Más eventos &rarr;
-            </a>
+
+            <div>
+             <p class="events__description" id="events-description">
+               En este evento, en el que celebramos el nombre de nuestra biblioteca, nuestra
+               invitada nos llevará a través de un viaje para conocer a algunas de las mujeres
+               investigadoras más importantes en el mundo de la ciencia espacial. Es
+               fácil caer en la falsa idea de que este campo está principalmente
+               dominado por hombres, pero nuestra conferencia busca cambiar esa noción y
+               probar que no ha sido así desde, al menos, el siglo
+               XVII.
+             </p>
+              <a href="#" class="events__more">
+               Más eventos &rarr;
+              </a>
            </div>
            <div class="events__cover" id="eevents-cover">
              <img
