--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   src="./images/icon_calendar.svg"
                   alt="Calendar icon"
                   class="event-info__icon"
-               />
+                />
                 <p class="event-info__text">
                   Lunes 12 de enero
                 </p>
@@ -209,10 +209,11 @@
               </a>
            </div>
            <div class="events__cover" id="eevents-cover">
-             <img
-             src="./images/cafe.png"
-             alt="Cafe"
-             class="image events__image">
+              <img
+               src="./images/cafe.png"
+               alt="Cafe"
+               class="image events__image"
+              />
              <div class="person person_name_feynman">
                <p class="person__caption">
                  Joan Feynman
@@ -221,7 +222,7 @@
                  src="./images/person_feynman.png"
                  alt="Joan Feynman"
                  class="person__image person__image_size_l person__image"
-                 />
+                />
              </div>
              <div class="person person_name_burbidge">
                <p class="person__caption">
@@ -231,36 +232,38 @@
                  src="./images/person_burbidge.png"
                  alt="Margaret Burbidge"
                  class="person__image person__image_size_m"
-                 />
+                />
              </div>
              <div class="person person_name_cannon">
                <img
                  src="./images/person_cannon.png"
                  alt="Annie Jump Cannon"
                  class="person__image person__image_size_m"
-                 />
+                />
                <p class="person person__caption">
                  Annie Jump Cannon
                </p>
-           </div>
-           <div class="person person_name_tarter">
-             <p class="person__caption">
-               Jill Tarter
-             </p>
-             <img
-               src="./images/person_tarter.png"
-               alt="Jill Tartet"
-              class="person__image person__image_size_m">
-           </div>
-           <div class="person person_name_mitchell">
-             <img 
-               src="./images/person_mitchell.png"
-               alt="Maria Mitchell"
-               class="person__image person__image_size_s"
-              />
-             <p class="person person__caption">
-               Maria Mitchell
-             </p>
+             </div>
+             <div class="person person_name_tarter">
+               <p class="person__caption">
+                 Jill Tarter
+               </p>
+               <img
+                 src="./images/person_tarter.png"
+                 alt="Jill Tartet"
+                 class="person__image person__image_size_m"
+                />
+             </div>
+             <div class="person person_name_mitchell">
+               <img 
+                 src="./images/person_mitchell.png"
+                 alt="Maria Mitchell"
+                 class="person__image person__image_size_s"
+                />
+               <p class="person person__caption">
+                 Maria Mitchell
+               </p>
+             </div>
            </div>
          </div>
         </section>      
