--- a/index.html
+++ b/index.html
@@ -267,61 +267,66 @@
            </div>
          </div>
         </section>      
-  
-        <footer>
-         <section class="membership" id="membership">
-           <h2 class="membership__title" id="membership-title">¡Convertirse en miembro es muy fácil!</h2>
-             <ul class="membership__steps" id="membership-steps">
-               <li class="step">
-                 <h3 class="step__title">
+
+        <section> 
+          <footer>
+           <section class="membership" id="membership">
+             <h2 class="membership__title" id="membership-title">
+               ¡Convertirse en miembro es muy fácil!
+              </h2>
+              <ul class="membership__steps" id="membership-steps">
+                <li class="step">
+                  <h3 class="step__title">
                    Paso 1
                    <img
                      src="./images/icon_step_forward.svg"
                      alt="icon forward"
                      class="step__icon"
                     />
-                 </h3>
-                 <p class="step__description">
+                  </h3>
+                  <p class="step__description">
                    Completa el formulario de afiliación en línea o en persona.
-                 </p>
-               </li>
-               <li class="step">
-                 <h3 class="step__title">
+                  </p>
+                </li>
+                <li class="step">
+                  <h3 class="step__title">
                    Paso 2
-                   <img
+                    <img
                      src="./images/icon_step_forward.svg"
                      alt="icon forward"
                      class="step__icon"
                     />
-                 </h3>
-                 <p class="step__description">
+                  </h3>
+                  <p class="step__description">
                    Ven y recoge tu credencial de la biblioteca en la recepción.
-                 </p>
-               </li>
-               <li class="step">
-                 <h3 class="step__title">
+                  </p>
+                </li>
+                <li class="step">
+                  <h3 class="step__title">
                    Paso 3
-                   <img
+                    <img
                      src="./images/icon_step_forward.svg"
                      alt="icon forward"
                      class="step__icon"
                    />
-                 </h3>
-                 <p class="step__description">Firma el envés de la tarjeta.</p>
-               </li>
-               <li class="step">
-                 <h3 class="step__title">
+                  </h3>
+                  <p class="step__description">
+                    Firma el envés de la tarjeta.
+                  </p>
+                </li>
+                <li class="step">
+                  <h3 class="step__title">
                    Paso 4
-                   <img
+                    <img
                      src="./images/icon_step_finish.svg"
                      alt="icon finish"
                      class="step__icon"
-                   />
-                 </h3>
-                 <p class="step__description">
+                    />
+                  </h3>
+                  <p class="step__description">
                    ¡Disfruta de los increíbles beneficios de nuestra membresía!
-                 </p>
-               </li>
+                  </p>
+                </li>
              </ul>
           </section>
 
@@ -384,6 +389,7 @@
            </div>
          </section>
        </footer>
+      </section>
       </main> 
     </div>
   </body>
