Actualización de mi primer proyecto

--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
 
       <main class="content">
         <section id="staff" class="staff">
-          <h2 class="staff__title">
-            Los preferidos de nuestro staff
-          </h2>
+          <h2 class="staff__title">Los preferidos de nuestro staff</h2>
 
           <p class="staff__subtitle">Que nuestros lectores y lectoras aman</p>
 
@@ -111,7 +109,7 @@
                   básicos de la programación. Incluido por el MIT en uno de sus
                   cursos básicos de programación, SICP es un libro de
                   programación de carácter general que utiliza Scheme para
-                  ilustrar diversos conceptos de programación.
+                  ilustrar diversos conceptos de programación..
                 </p>
 
                 <p class="card__footer">
@@ -162,14 +160,14 @@
             </li>
           </ul>
         </section>
-    
-        <section class="events" id="events" >
-         <div class="events__content" id="events-content">
+
+        <section class="events" id="events">
+          <div class="events__content" id="events-content">
             <h2 class="events__heading" id="events-heading">
-             Próximos eventos:
+              Próximos eventos:
             </h2>
             <h3 class="events__title" id="events-title">
-             En honor de Joan Feynman: mujeres en la astrofísica
+              En honor de Joan Feynman: mujeres en la astrofísica
             </h3>
             <div class="event-info events__info-section" id="event-info">
               <div class="event-info__item">
@@ -178,219 +176,208 @@
                   alt="Calendar icon"
                   class="event-info__icon"
                 />
-                <p class="event-info__text">
-                  Lunes 12 de enero
-                </p>
+                <p class="event-info__text">Lunes 12 de enero</p>
               </div>
               <div class="event-info__item" id="event-info-item">
                 <img
-                 src="./images/icon_pin.svg"
-                 alt="Pin icon"
-                 class="event-info__icon"
+                  src="./images/icon_pin.svg"
+                  alt="Pin icon"
+                  class="event-info__icon"
                 />
                 <p class="event-info__text" id="event-info-text">
-                 Sala de conferencias y virtual de la biblioteca Triple Peaks
+                  Sala de conferencias y virtual de la biblioteca Triple Peaks
                 </p>
               </div>
             </div>
 
             <div>
-             <p class="events__description" id="events-description">
-               En este evento, en el que celebramos el nombre de nuestra biblioteca, nuestra
-               invitada nos llevará a través de un viaje para conocer a algunas de las mujeres
-               investigadoras más importantes en el mundo de la ciencia espacial. Es
-               fácil caer en la falsa idea de que este campo está principalmente
-               dominado por hombres, pero nuestra conferencia busca cambiar esa noción y
-               probar que no ha sido así desde, al menos, el siglo
-               XVII.
-             </p>
-              <a href="#" class="events__more">
-               Más eventos &rarr;
-              </a>
-           </div>
-           <div class="events__cover" id="eevents-cover">
+              <p class="events__description" id="events-description">
+                En este evento, en el que celebramos el nombre de nuestra
+                biblioteca, nuestra invitada nos llevará a través de un viaje
+                para conocer a algunas de las mujeres investigadoras más
+                importantes en el mundo de la ciencia espacial. Es fácil caer en
+                la falsa idea de que este campo está principalmente dominado por
+                hombres, pero nuestra conferencia busca cambiar esa noción y
+                probar que no ha sido así desde, al menos, el siglo XVII.
+              </p>
+              <a href="#" class="events__more"> Más eventos &rarr; </a>
+            </div>
+          </div>
+          <div class="events__cover" id="events-cover">
+            <img
+              src="./images/cafe.png"
+              alt="Cafe"
+              class="image events__image"
+            />
+            <div class="person person_name_feynman">
+              <p class="person__caption">Joan Feynman</p>
               <img
-               src="./images/cafe.png"
-               alt="Cafe"
-               class="image events__image"
+                src="./images/person_feynman.png"
+                alt="Joan Feynman"
+                class="person__image person__image_size_l person__image"
               />
-             <div class="person person_name_feynman">
-               <p class="person__caption">
-                 Joan Feynman
-               </p>
-               <img
-                 src="./images/person_feynman.png"
-                 alt="Joan Feynman"
-                 class="person__image person__image_size_l person__image"
-                />
-             </div>
-             <div class="person person_name_burbidge">
-               <p class="person__caption">
-                 Margaret Burbidge
-               </p>
-               <img
-                 src="./images/person_burbidge.png"
-                 alt="Margaret Burbidge"
-                 class="person__image person__image_size_m"
-                />
-             </div>
-             <div class="person person_name_cannon">
-               <img
-                 src="./images/person_cannon.png"
-                 alt="Annie Jump Cannon"
-                 class="person__image person__image_size_m"
-                />
-               <p class="person person__caption">
-                 Annie Jump Cannon
-               </p>
-             </div>
-             <div class="person person_name_tarter">
-               <p class="person__caption">
-                 Jill Tarter
-               </p>
-               <img
-                 src="./images/person_tarter.png"
-                 alt="Jill Tartet"
-                 class="person__image person__image_size_m"
-                />
-             </div>
-             <div class="person person_name_mitchell">
-               <img 
-                 src="./images/person_mitchell.png"
-                 alt="Maria Mitchell"
-                 class="person__image person__image_size_s"
-                />
-               <p class="person person__caption">
-                 Maria Mitchell
-               </p>
-             </div>
-           </div>
-         </div>
-        </section>      
+            </div>
+            <div class="person person_name_burbidge">
+              <p class="person__caption">Margaret Burbidge</p>
+              <img
+                src="./images/person_burbidge.png"
+                alt="Margaret Burbidge"
+                class="person__image person__image_size_m"
+              />
+            </div>
+            <div class="person person_name_cannon">
+              <img
+                src="./images/person_cannon.png"
+                alt="Annie Jump Cannon"
+                class="person__image person__image_size_m"
+              />
+              <p class="person person__caption">Annie Jump Cannon</p>
+            </div>
+            <div class="person person_name_tarter">
+              <p class="person__caption">Jill Tarter</p>
+              <img
+                src="./images/person_tarter.png"
+                alt="Jill Tartet"
+                class="person__image person__image_size_m"
+              />
+            </div>
+            <div class="person person_name_mitchell">
+              <img
+                src="./images/person_mitchell.png"
+                alt="Maria Mitchell"
+                class="person__image person__image_size_s"
+              />
+              <p class="person person__caption">Maria Mitchell</p>
+            </div>
+          </div>
+        </section>
 
-        <section> 
+        <section>
           <footer>
-           <section class="membership" id="membership">
-             <h2 class="membership__title" id="membership-title">
-               ¡Convertirse en miembro es muy fácil!
+            <section class="membership" id="membership">
+              <h2 class="membership__title" id="membership-title">
+                ¡Convertirse en miembro es muy fácil!
               </h2>
               <ul class="membership__steps" id="membership-steps">
                 <li class="step">
                   <h3 class="step__title">
-                   Paso 1
-                   <img
-                     src="./images/icon_step_forward.svg"
-                     alt="icon forward"
-                     class="step__icon"
+                    Paso 1
+                    <img
+                      src="./images/icon_step_forward.svg"
+                      alt="icon forward"
+                      class="step__icon"
                     />
                   </h3>
                   <p class="step__description">
-                   Completa el formulario de afiliación en línea o en persona.
+                    Completa el formulario de afiliación en línea o en persona.
                   </p>
                 </li>
                 <li class="step">
                   <h3 class="step__title">
-                   Paso 2
+                    Paso 2
                     <img
-                     src="./images/icon_step_forward.svg"
-                     alt="icon forward"
-                     class="step__icon"
+                      src="./images/icon_step_forward.svg"
+                      alt="icon forward"
+                      class="step__icon"
                     />
                   </h3>
                   <p class="step__description">
-                   Ven y recoge tu credencial de la biblioteca en la recepción.
+                    Ven y recoge tu credencial de la biblioteca en la recepción.
                   </p>
                 </li>
                 <li class="step">
                   <h3 class="step__title">
-                   Paso 3
+                    Paso 3
                     <img
-                     src="./images/icon_step_forward.svg"
-                     alt="icon forward"
-                     class="step__icon"
-                   />
+                      src="./images/icon_step_forward.svg"
+                      alt="icon forward"
+                      class="step__icon"
+                    />
                   </h3>
-                  <p class="step__description">
-                    Firma el envés de la tarjeta.
-                  </p>
+                  <p class="step__description">Firma el envés de la tarjeta.</p>
                 </li>
                 <li class="step">
                   <h3 class="step__title">
-                   Paso 4
+                    Paso 4
                     <img
-                     src="./images/icon_step_finish.svg"
-                     alt="icon finish"
-                     class="step__icon"
+                      src="./images/icon_step_finish.svg"
+                      alt="icon finish"
+                      class="step__icon"
                     />
                   </h3>
                   <p class="step__description">
-                   ¡Disfruta de los increíbles beneficios de nuestra membresía!
+                    ¡Disfruta de los increíbles beneficios de nuestra membresía!
                   </p>
                 </li>
-             </ul>
-          </section>
+              </ul>
+            </section>
 
-         <section class="footer" id="footer">
-           <div class="footer__columns" id="footer-columns">
-             <div class="footer__column footer" id="footer-column">
-              <img
-                src="./images/logo.svg"
-                alt="Logo"
-                class="footer__logo" id="footer-logo"
-              />
-             </div>
-             <div class="footer__column footer__column_content_hours" id="footer-column-content-hours">
-               <h3 class="footer__column-heading" id="foooter-column-heading">
-                 Horario de apertura
-               </h3>
-               <ul class="footer__list" id="footer-list">
-                 <li class="footer__list-item" id="footer-list-item">
-                   <p>
-                     Lunes a viernes: 9 a.m. -- 8 p.m.
-                   </p>
-                 </li>
-                 <li class="footer__list-item">
-                   <p>
-                     Sábados y domingos: 10 a.m. -- 6 p.m.
-                   </p>
-                 </li>
-               </ul>
-             </div>
-             <div class="footer__column footer__column_content_social" id="footer-column-content-social">
-               <h3 class="footer__column-heading">
-                 Redes sociales
-               </h3>
-               <ul class="footer__list">
-                 <li class="footer__list-item">
-                   <p class="footer__column-link">
-                     <img
-                     src="./images/facebook_white.svg"
-                     alt="Facebook"
-                     class="footer__social-icon"
-                     id="footer-social-icon">
-                     Facebook
-                   </p>
-                 </li>
-                 <li class="footer__list-item">
-                   <p class="footer__column-link" id="footer-column-link">
-                     <img
-                     src="images/instagram_white.svg"
-                     alt="Instagram"
-                     class="footer__social-icon"
-                     />
-                     Instagram
-                   </p>
-                 </li>
-               </ul>
-               <p class="footer__copyright" id="footer-copyright">
-                 © 2024 Fernanda Vega 
-               </p>
-             </div>
-           </div>
-         </section>
-       </footer>
-      </section>
-      </main> 
+            <section class="footer" id="footer">
+              <div class="footer__columns" id="footer-columns">
+                <div class="footer__column footer" id="footer-column">
+                  <img
+                    src="./images/logo.svg"
+                    alt="Logo"
+                    class="footer__logo"
+                    id="footer-logo"
+                  />
+                </div>
+                <div
+                  class="footer__column footer__column_content_hours"
+                  id="footer-column-content-hours"
+                >
+                  <h3
+                    class="footer__column-heading"
+                    id="foooter-column-heading"
+                  >
+                    Horario de apertura
+                  </h3>
+                  <ul class="footer__list" id="footer-list">
+                    <li class="footer__list-item" id="footer-list-item">
+                      <p>Lunes a viernes: 9 a.m. -- 8 p.m.</p>
+                    </li>
+                    <li class="footer__list-item">
+                      <p>Sábados y domingos: 10 a.m. -- 6 p.m.</p>
+                    </li>
+                  </ul>
+                </div>
+                <div
+                  class="footer__column footer__column_content_social"
+                  id="footer-column-content-social"
+                >
+                  <h3 class="footer__column-heading">Redes sociales</h3>
+                  <ul class="footer__list">
+                    <li class="footer__list-item">
+                      <p class="footer__column-link">
+                        <img
+                          src="./images/facebook_white.svg"
+                          alt="Facebook"
+                          class="footer__social-icon"
+                          id="footer-social-icon"
+                        />
+                        Facebook
+                      </p>
+                    </li>
+                    <li class="footer__list-item">
+                      <p class="footer__column-link" id="footer-column-link">
+                        <img
+                          src="images/instagram_white.svg"
+                          alt="Instagram"
+                          class="footer__social-icon"
+                        />
+                        Instagram
+                      </p>
+                    </li>
+                  </ul>
+                  <p class="footer__copyright" id="footer-copyright">
+                    © 2024 Fernanda Vega
+                  </p>
+                </div>
+              </div>
+            </section>
+          </footer>
+        </section>
+      </main>
     </div>
   </body>
 </html>
