--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               </ul>
             </section>
 
-            <section class="footer" id="footer">
+            <section id="footer">
               <div class="footer__columns" id="footer-columns">
                 <div class="footer__column footer" id="footer-column">
                   <img
