--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
               </ul>
             </section>
 
-            <section id="footer">
-              <div class="footer__columns" id="footer-columns">
-                <div class="footer__column footer" id="footer-column">
+            <section id="footer" class="footer">
+              <div id="footer-columns" class="footer__columns">
+                <div id="footer-column" class="footer__column footer">
                   <img
                     src="./images/logo.svg"
                     alt="Logo"
@@ -327,8 +327,8 @@
                   id="footer-column-content-hours"
                 >
                   <h3
-                    class="footer__column-heading"
                     id="foooter-column-heading"
+                    class="footer__column-heading"
                   >
                     Horario de apertura
                   </h3>
@@ -342,8 +342,8 @@
                   </ul>
                 </div>
                 <div
-                  class="footer__column footer__column_content_social"
                   id="footer-column-content-social"
+                  class="footer__column footer__column_content_social"
                 >
                   <h3 class="footer__column-heading">Redes sociales</h3>
                   <ul class="footer__list">
@@ -359,7 +359,7 @@
                       </p>
                     </li>
                     <li class="footer__list-item">
-                      <p class="footer__column-link" id="footer-column-link">
+                      <p id="footer-column-link" class="footer__column-link">
                         <img
                           src="images/instagram_white.svg"
                           alt="Instagram"
